@@ -1,3 +1,9 @@
+2002-07-26  Deepa Natarajan  <deepa.natarajan@wipro.com>
+
+	* log_repaint.c, logrtns.c, logview.h: When logview first 
+	comes up set focus on the last row and scroll to that row. 
+	Always maintain the last focused line. Fixes bug #87398.
+
 2002-07-25  Deepa Natarajan  <deepa.natarajan@wipro.com>
 
 	* logview.[ch], log_repaint.c: Maintain the correct status
